Crash when changing BBone scale in pose mode. #64091

Closed
opened 2019-05-02 17:24:52 +02:00 by Demeter Dzadik · 7 comments
Member

System Information
Operating system: Win10 v1607
Graphics card: GTX 1070

Blender Version
Broken: 2.80, e8daa61570

Short description of error
I wanted to fix the bbone scale of my face bones and blender crashed. It doesn't happen on freshly spawned armatures, so I've attached this one. It works fine in edit mode, only crashes in pose mode.

Exact steps for others to reproduce the error
ctrl_alt_s_crash.blend

  • Open attached blend
  • Press Ctrl+Alt+S in pose mode on any bone.
  • Crash.
**System Information** Operating system: Win10 v1607 Graphics card: GTX 1070 **Blender Version** Broken: 2.80, e8daa615704b **Short description of error** I wanted to fix the bbone scale of my face bones and blender crashed. It doesn't happen on freshly spawned armatures, so I've attached this one. It works fine in edit mode, only crashes in pose mode. **Exact steps for others to reproduce the error** [ctrl_alt_s_crash.blend](https://archive.blender.org/developer/F7001500/ctrl_alt_s_crash.blend) - Open attached blend - Press Ctrl+Alt+S in pose mode on any bone. - Crash.
Author
Member

Added subscriber: @Mets

Added subscriber: @Mets

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Alexander Gavrilov was assigned by Sebastian Parborg 2019-05-02 17:44:15 +02:00

Backtrace:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
ED_armature_edit_transform_mirror_update (obedit=0x7fffd320e608) at /home/zed/prog/blender/source/blender/editors/armature/armature_utils.c:378
378	  for (ebo = arm->edbo->first; ebo; ebo = ebo->next) {
(gdb) bt
- 0  ED_armature_edit_transform_mirror_update (obedit=0x7fffd320e608) at /home/zed/prog/blender/source/blender/editors/armature/armature_utils.c:378
- 1  0x0000555558cab48c in recalcData_objects (t=0x7fffd330d208) at /home/zed/prog/blender/source/blender/editors/transform/transform_generics.c:980
- 2  0x0000555558cabee0 in recalcData (t=0x7fffd330d208) at /home/zed/prog/blender/source/blender/editors/transform/transform_generics.c:1183
- 3  0x0000555558c5e96a in applyBoneSize (t=0x7fffd330d208, UNUSED_mval=0x7fffd330d7b0)
    at /home/zed/prog/blender/source/blender/editors/transform/transform.c:6251
- 4  0x0000555558c535a5 in transformApply (C=0x7fffeb458208, t=0x7fffd330d208) at /home/zed/prog/blender/source/blender/editors/transform/transform.c:2748
- 5  0x0000555558cbead2 in transform_modal (C=0x7fffeb458208, op=0x7fffd276d248, event=0x7fffd27a9208)
    at /home/zed/prog/blender/source/blender/editors/transform/transform_ops.c:427
#6  0x000055555824f2fb in wm_handler_operator_call (C=0x7fffeb458208, handlers=0x7fffd3140718, handler_base=0x7fffcf9651f8, event=0x7fffd27a9208,
    properties=0x0) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2145
#7  0x0000555558250da4 in wm_handlers_do_intern (C=0x7fffeb458208, event=0x7fffd27a9208, handlers=0x7fffd3140718)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2756
#8  0x0000555558250f37 in wm_handlers_do (C=0x7fffeb458208, event=0x7fffd27a9208, handlers=0x7fffd3140718)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2804
- 9  0x00005555582521ab in wm_event_do_handlers (C=0x7fffeb458208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:3172
- 10 0x0000555558245da5 in WM_main (C=0x7fffeb458208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:418
#11 0x0000555557badfd9 in main (argc=1, argv=0x7fffffffe088) at /home/zed/prog/blender/source/creator/creator.c:500
Backtrace: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. ED_armature_edit_transform_mirror_update (obedit=0x7fffd320e608) at /home/zed/prog/blender/source/blender/editors/armature/armature_utils.c:378 378 for (ebo = arm->edbo->first; ebo; ebo = ebo->next) { (gdb) bt - 0 ED_armature_edit_transform_mirror_update (obedit=0x7fffd320e608) at /home/zed/prog/blender/source/blender/editors/armature/armature_utils.c:378 - 1 0x0000555558cab48c in recalcData_objects (t=0x7fffd330d208) at /home/zed/prog/blender/source/blender/editors/transform/transform_generics.c:980 - 2 0x0000555558cabee0 in recalcData (t=0x7fffd330d208) at /home/zed/prog/blender/source/blender/editors/transform/transform_generics.c:1183 - 3 0x0000555558c5e96a in applyBoneSize (t=0x7fffd330d208, UNUSED_mval=0x7fffd330d7b0) at /home/zed/prog/blender/source/blender/editors/transform/transform.c:6251 - 4 0x0000555558c535a5 in transformApply (C=0x7fffeb458208, t=0x7fffd330d208) at /home/zed/prog/blender/source/blender/editors/transform/transform.c:2748 - 5 0x0000555558cbead2 in transform_modal (C=0x7fffeb458208, op=0x7fffd276d248, event=0x7fffd27a9208) at /home/zed/prog/blender/source/blender/editors/transform/transform_ops.c:427 #6 0x000055555824f2fb in wm_handler_operator_call (C=0x7fffeb458208, handlers=0x7fffd3140718, handler_base=0x7fffcf9651f8, event=0x7fffd27a9208, properties=0x0) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2145 #7 0x0000555558250da4 in wm_handlers_do_intern (C=0x7fffeb458208, event=0x7fffd27a9208, handlers=0x7fffd3140718) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2756 #8 0x0000555558250f37 in wm_handlers_do (C=0x7fffeb458208, event=0x7fffd27a9208, handlers=0x7fffd3140718) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2804 - 9 0x00005555582521ab in wm_event_do_handlers (C=0x7fffeb458208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:3172 - 10 0x0000555558245da5 in WM_main (C=0x7fffeb458208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:418 #11 0x0000555557badfd9 in main (argc=1, argv=0x7fffffffe088) at /home/zed/prog/blender/source/creator/creator.c:500 ```
Alexander Gavrilov removed their assignment 2019-05-11 15:53:53 +02:00
Philipp Oeser was assigned by Alexander Gavrilov 2019-05-11 15:53:53 +02:00

Added subscriber: @angavrilov

Added subscriber: @angavrilov

This crashes in code added by D4733.

This crashes in code added by [D4733](https://archive.blender.org/developer/D4733).

This issue was referenced by c6f975e3e5

This issue was referenced by c6f975e3e58996cfdeec56741ea652e3f06f9b25
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64091
No description provided.